--- a/travel/style.css
+++ b/travel/style.css
@@ -12,6 +12,12 @@
   font-style: normal;
 }
 @font-face {
+  font-family: 'Red Hat Text';
+  src: url("./assets/fonts/RedHatText-Regular.ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
   font-family: 'Aleo';
   src: url("./assets/fonts/Aleo-Bold.ttf");
   font-weight: 700;
@@ -41,6 +47,11 @@
 html {
   scroll-behavior: smooth;
 }
+:root {
+  --offset: 0px;
+  --order: 0;
+  --top: -700px;
+}
 /* --------------------------</HTML>-------------------------- */
 
 /* --------------------------<BODY>-------------------------- */
@@ -49,6 +60,11 @@ html {
   background: url(./assets/img/back-top.jpg) center top no-repeat,
   url(./assets/img/back-bottom.jpg) center bottom no-repeat,
   #E5E5E5;
+  font-family: 'Aleo', serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  color: #0D606F;
 }
 body.lock {
   overflow: hidden;
@@ -66,6 +82,133 @@ body.lock {
   justify-content: center;
   align-items: center;
 }
+/* --------------------------<POP-UP>-------------------------- */
+.pop-up {
+  /* display: none; */
+  position: absolute;
+  width: 650px;
+  background: linear-gradient(177.09deg, #FFFFFF 6.15%, #0D606F 202.69%);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 16px;
+  text-align: center;
+  transition: 1s;
+	left: 50%;
+	top: -4px;
+	transform: translate(-50%, -100%);
+}
+.slideout {
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.pop-up__wrapper {
+  margin: 25px 45px 23px 45px;
+  display: flex;
+  flex-direction: column;
+}
+.pop-up__title-text {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 38px;
+  margin: 0 0 30px 0;
+}
+.pop-up__button {
+  height: 56px;
+  font-family: 'Red Hat Text';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 26px;
+  color: #FFFFFF;
+  box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
+  border-radius: 10px;
+  border: 0;
+  padding: 0;
+}
+.facebook {
+  background: #1877F2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  margin-bottom: 20px;
+}
+.google {
+  background: #FFFFFF;
+  color: #0D606F;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  margin-bottom: 20px;
+}
+.sign {
+  height: 54px;
+  background: #0D606F;
+  margin: 5px 0 10px 0;
+}
+.or {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
+}
+.or-line {
+  width: 261px;
+  border: 1px solid rgba(13, 96, 111, 0.5);
+}
+.or-text {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: rgba(13, 96, 111, 0.5);
+  margin: 0;
+}
+.pop-up__left-text {
+  text-align: start;
+  font-size: 16px;
+  line-height: 19px;
+  margin: 0;
+}
+.pop-up__input {
+  height: 54px;
+  background: #FFFFFF;
+  box-shadow: inset 0px 0px 3px rgba(13, 96, 111, 0.08), inset 0px 2px 3px rgba(13, 96, 111, 0.16);
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  padding: 0;
+  margin: 5px 0 20px 0;
+}
+.forgot {
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
+  text-decoration-line: underline;
+  text-shadow: 0px 2px 3px rgba(255, 255, 255, 0.16);
+  margin: 0 0 10px 0;
+}
+.bottom-line {
+  border: 1px solid rgba(13, 96, 111, 0.5);
+  margin: 16px 0 20px 0;
+}
+.bottom-text {
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 18px;
+  color: rgba(13, 96, 111, 0.5);
+  text-shadow: 0px 2px 3px rgba(255, 255, 255, 0.16);
+  margin: 0;
+}
+.last-text-register, .last-text-login {
+  text-decoration-line: underline;
+  color: #0D606F;
+  cursor: pointer;
+}
+.register {
+  display: none;
+}
+/* --------------------------</POP-UP>-------------------------- */
 .wrapper__header {
   width: 1200px;
   margin: 0 16px;
@@ -102,6 +245,7 @@ body.lock {
 .logo:hover .logo-text {
   color: #0D606F;
 }
+/* --------------------------<BURGER-MENU>-------------------------- */
 .menu {
   display: flex;
   width: 53%;
@@ -110,6 +254,30 @@ body.lock {
 .burger-close {
   display: none;
 }
+.burger {
+  display: none;
+}
+.burger-path {
+  transition: 0.3s;
+}
+.burger:hover .burger-path {
+  fill: #0D606F;
+}
+.overlay {
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  transition: 0.3s;
+}
+.overlay.active {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.4);
+  top: 0;
+  left: 0;
+}
+/* --------------------------</BURGER-MENU>-------------------------- */
 .nav {
   width: 100%;
   display: flex;
@@ -161,15 +329,6 @@ body.lock {
 .button-login:hover {
   background: #FFFFFF;
   color: #0D606F;
-}
-.burger {
-  display: none;
-}
-.burger-path {
-  transition: 0.3s;
-}
-.burger:hover .burger-path {
-  fill: #0D606F;
 }
 /* --------------------------</HEADER>-------------------------- */
 
@@ -369,14 +528,15 @@ input:focus::placeholder {
   display: flex;
   justify-content: center;
   gap: 4.1%;
-  transition: 1s;
   left: 0;
 }
 .carousel.left {
-  left: 860px;
+  transition: 1s;
+  left: var(--offset);
 }
 .carousel.right {
-  left: -860px;
+  transition: 1s;
+  left: calc(var(--offset)*-1)
 }
 .carousel-overlay {
   display: flex;
@@ -406,27 +566,6 @@ input:focus::placeholder {
   width: 800px;
   height: 800px;
   border-radius: 16px;
-}
-.picture.japan2 {
-  order: 1;
-}
-.picture.usa2 {
-  order: 2;
-}
-.picture.spain {
-  order: 3;
-}
-.picture.japan {
-  order: 4;
-}
-.picture.usa {
-  order: 5;
-}
-.picture.spain2 {
-  order: 6;
-}
-.picture.japan3 {
-  order: 7;
 }
 .destination-text {
   align-self: flex-start;
@@ -463,6 +602,7 @@ input:focus::placeholder {
 }
 .filled {
   background: #F2785C;
+  order: var(--order);
 }
 .button-arrow-path {
   transition: 0.3s;
@@ -1069,17 +1209,6 @@ input:focus::placeholder {
   .menu.active {
     right: 0;
   }
-  .overlay {
-    transition: 0.3s;
-  }
-  .overlay.active {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.4);
-    top: 0;
-    left: 0;
-  }
   .burger-close {
     display: block;
     cursor: pointer;
@@ -1183,18 +1312,6 @@ input:focus::placeholder {
   .picture img:nth-child(2) {
     display: block;
   }
-  .picture.spain2, .picture.japan2, .picture.japan3, .picture.usa2 {
-    display: none;
-  }
-  .picture.spain {
-    order: 2;
-  }
-  .picture.japan {
-    order: 3;
-  }
-  .picture.usa {
-    order: 1;
-  }
   .destination-img {
     width: 92.3vw;
     height: 210px;
@@ -1211,9 +1328,6 @@ input:focus::placeholder {
   .round {
     width: 8px;
     height: 8px;
-  }
-  .filled {
-    order: -1;
   }
   .button-arrow {
     Width: 10px;
