--- a/travel/style.css
+++ b/travel/style.css
@@ -177,6 +177,11 @@ body.lock {
   border-radius: 10px;
   border: none;
   outline: none;
+  font-family: 'Aleo', serif;
+  font-style: italic;
+  font-weight: 400;
+  font-size: 24px;
+  color: #0D606F;
   padding: 0;
   margin: 5px 0 20px 0;
 }
